# Tensorflow-style-Neural-Network-Framework

./: CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  main.cpp  main_cv.cpp  main_image.cpp  main_yolo.cpp  readme
include/: BoundingBox.cpp  BoundingBox.h  DAC_include.h  ImgLoader.cpp  ImgLoader.h  NETNAME.h  Network.cpp  Network.h  font.h  quantize.h
net_def/: readme.md
net_def/DAC/: DAC_include.h  DAC_include2.h  NetDAC.cpp  NetDAC.h  readme
net_def/YOLO/: NETNAME_YOLO.h  NetYOLO.cpp  NetYOLO.h  YOLO_include.h
src/: image_proc.h  readme  string_op.h
